Mon, Nov 28, 2008
---------------------------------------------------------------------
- Installed Rspec and acts_as_paranoid plugins.
- Created the project and posted it on GitHub.