@@ -1,0 +1,2 @@
+class User < ActiveRecord::Base
+end
